src/test/ui/feature-gates/feature-gate-cfg-attr-multi-2.stderr
error[E0658]: cfg_attr with zero or more than one attributes is experimental (see issue #54881)
  --> $DIR/feature-gate-cfg-attr-multi-2.rs:1:1
   |
LL | #![cfg_attr(all(),)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_attr_multi)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
