src/test/ui/feature-gates/feature-gate-cfg-attr-multi-2.rs
#![cfg_attr(all(),)]
//~^ ERROR cfg_attr with zero or more than one attributes is experimental
fn main() {}
